--- a/testdata/ns-npt-1/pod.yaml
+++ b/testdata/ns-npt-1/pod.yaml
@@ -2,18 +2,16 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: serve-pod-info
-  namespace: ns-npt-0
+  namespace: ns-npt-1
 spec:
   containers:
     - name: test-container
       image: cheriot/clitools:latest
-      resources:
-        requests:
-          memory: "32Mi"
-          cpu: "125m"
-        limits:
-          memory: "64Mi"
-          cpu: "250m"
+      ports:
+        - name: api
+          containerPort: 3000
+        - name: admin
+          containerPort: 3001
       env:
         - name: POD_CPU_REQUEST
           valueFrom:
