K8s fixtures that can be used for unit and integration tests.

--- a/testdata/generated-yamls/back-end/pod-product-a.yaml
+++ b/testdata/generated-yamls/back-end/pod-product-a.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     name: product-a
   name: product-a
-  namespace: back-end-dev
+  namespace: back-end
 spec:
   containers:
   - env:
