--- a/testdata/generated-yamls/back-end/namespace.yaml
+++ b/testdata/generated-yamls/back-end/namespace.yaml
@@ -3,7 +3,7 @@ kind: Namespace
 metadata:
   creationTimestamp: null
   labels:
-    name: back-end-dev
-  name: back-end-dev
+    name: back-end
+  name: back-end
 spec: {}
 status: {}
