--- a/testdata/generated-yamls/back-end/networkpolicy-default-deny-all.yaml
+++ b/testdata/generated-yamls/back-end/networkpolicy-default-deny-all.yaml
@@ -1,9 +1,11 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: default-deny-ingress
-  namespace: ns-npt-0
+  creationTimestamp: null
+  name: default-deny-all
+  namespace: back-end
 spec:
   podSelector: {}
   policyTypes:
   - Ingress
+  - Egress
