--- a/testdata/generated-yamls/front-end-dev/namespace.yaml
+++ b/testdata/generated-yamls/front-end-dev/namespace.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   creationTimestamp: null
+  labels:
+    name: front-end-dev
   name: front-end-dev
 spec: {}
 status: {}
