--- a/testdata/generated-yamls/front-end-dev/pod-graphql-a.yaml
+++ b/testdata/generated-yamls/front-end-dev/pod-graphql-a.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   creationTimestamp: null
+  labels:
+    name: graphql-a
   name: graphql-a
   namespace: front-end-dev
 spec:
@@ -19,7 +21,7 @@ spec:
     name: test-container
     ports:
     - containerPort: 3000
-      name: api
+      name: http
       protocol: TCP
     resources: {}
   restartPolicy: Never
